[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/deck_scene/banner.tscn" type="PackedScene" id=1]
[ext_resource path="res://fonts/ShipporiAntique-Medium.otf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/deck_scene/select_edit_scene.gd" type="Script" id=3]
[ext_resource path="res://scenes/deck_scene/edit_scene.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/deck_scene/banner_container.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/deck_scene/theme.tres" type="Theme" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=9]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=10]
content_margin_left = 8.0
content_margin_top = 4.0
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 0.752941 )

[node name="DeckSelectScene" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 256, 0 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 1 )

[node name="ReturnButton" type="Button" parent="Panel"]
margin_left = 16.0
margin_top = 16.0
margin_right = 208.0
margin_bottom = 80.0
text = "BACK"

[node name="ButtonDelete" type="Button" parent="Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -216.0
margin_top = 24.0
margin_right = -40.0
margin_bottom = 88.0
text = "DELETE"

[node name="ButtonCopy" type="Button" parent="Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -216.0
margin_top = 120.0
margin_right = -40.0
margin_bottom = 184.0
text = "COPY"

[node name="ButtonNew" type="Button" parent="Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -216.0
margin_top = 216.0
margin_right = -40.0
margin_bottom = 280.0
text = "NEW"

[node name="ButtonUP" type="Button" parent="Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -224.0
margin_top = 320.0
margin_right = -144.0
margin_bottom = 376.0
text = "↑"

[node name="ButtonDown" type="Button" parent="Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -224.0
margin_top = 384.0
margin_right = -144.0
margin_bottom = 440.0
grow_horizontal = 2
text = "↓"
clip_text = true

[node name="ButtonMoveSave" type="Button" parent="Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -112.0
margin_top = 352.0
margin_right = -16.0
margin_bottom = 408.0
grow_horizontal = 2
disabled = true
text = "SAVE"
clip_text = true

[node name="ButtonEdit" type="Button" parent="Panel"]
margin_left = 1056.0
margin_top = 576.0
margin_right = 1248.0
margin_bottom = 640.0
text = "EDIT"

[node name="Label" type="Label" parent="Panel"]
margin_left = 32.0
margin_top = 128.0
margin_right = 224.0
margin_bottom = 576.0
custom_fonts/font = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
text = "こっちには
ソートや
フィルター系のUIを
置く感じか？"
autowrap = true
clip_text = true

[node name="BannerContainer" parent="." instance=ExtResource( 5 )]
margin_left = 256.0
margin_top = 16.0
margin_bottom = 704.0
rect_min_size = Vector2( 720, 688 )

[node name="BuildScene" parent="." instance=ExtResource( 4 )]
visible = false

[node name="PopupDialog" type="PopupDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 8 )
popup_exclusive = true

[node name="ButtonOK" type="Button" parent="PopupDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -232.0
margin_right = -64.0
margin_bottom = -168.0
text = "削除する"

[node name="ButtonCancel" type="Button" parent="PopupDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 64.0
margin_top = -232.0
margin_right = 256.0
margin_bottom = -168.0
text = "しない"

[node name="DeckBanner" parent="PopupDialog" instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.0
margin_top = -108.0
margin_right = 360.0
margin_bottom = 108.0

[connection signal="pressed" from="Panel/ReturnButton" to="." method="_on_ReturnButton_pressed"]
[connection signal="pressed" from="Panel/ButtonDelete" to="." method="_on_ButtonDelete_pressed"]
[connection signal="pressed" from="Panel/ButtonCopy" to="." method="_on_ButtonCopy_pressed"]
[connection signal="pressed" from="Panel/ButtonNew" to="." method="_on_ButtonNew_pressed"]
[connection signal="pressed" from="Panel/ButtonUP" to="." method="_on_ButtonUP_pressed"]
[connection signal="pressed" from="Panel/ButtonDown" to="." method="_on_ButtonDown_pressed"]
[connection signal="pressed" from="Panel/ButtonMoveSave" to="." method="_on_ButtonMoveSave_pressed"]
[connection signal="pressed" from="Panel/ButtonEdit" to="." method="_on_ButtonEdit_pressed"]
[connection signal="pressed_save_button" from="BuildScene" to="." method="_on_BuildScene_pressed_save_button"]
[connection signal="pressed" from="PopupDialog/ButtonOK" to="." method="_on_ButtonOK_pressed"]
[connection signal="pressed" from="PopupDialog/ButtonCancel" to="." method="_on_ButtonCancel_pressed"]
